--- a/package.json
+++ b/package.json
@@ -2,10 +2,13 @@
   "name": "Egao",
   "version": "1.0.0",
   "description": "",
+  "engines": {
+    "node": "12.x"
+  },
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server"
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
@@ -14,8 +17,5 @@
     "express": "^4.17.1",
     "jimp": "^0.16.1",
     "multer": "^1.4.2"
-  },
-  "engines": {
-    "node": "14.x"
   }
 }
